Fixed nav bar jump on unlisted pages, carousel not accessible and carousel not autoplaying correctly.

--- a/css/style.css
+++ b/css/style.css
@@ -271,8 +271,7 @@ button.btn-floating {
   display: block;
   z-index: 900;
   width: 100%;
-  height: auto;
-  background-color: #ef6c00; }
+  height: auto; }
 
 .headroom--not-top {
   transition: transform 210ms linear; }
