--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,7 +8,6 @@
   z-index: 900;
   width: 100%;
   height: auto;
-  background-color: $orange-darken-3;
 }
 .headroom--top {
 
